package ry.ms.businessLogic.tournament.models;

public enum TournamentStatus {
    PLANNING,
    IN_PROGRESS,
    COMPLETED,
    CANCELLED
}
